syntax = "proto3";

package network.forta;

option go_package = "./;protocol";

message AgentMetrics {
  string agentId = 1;
  string timestamp = 2;
  repeated MetricSummary metrics = 3;
}

message MetricSummary {
  string name = 1;
  uint32 count = 2;
  double max = 3;
  double average = 4;
  double sum = 5;
  double p95 = 6;
  string details = 7;
  int32 shardId = 8;
}

message AgentMetric {
  string agentId = 1;
  string timestamp = 2;
  string name = 3;
  double value = 4;
  string details = 5;
  int32 shardId = 6;
}

message AgentMetricList {
  repeated AgentMetric Metrics = 1;
}
